--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22"
